first commit is here

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-MONGODB_URL = mongodb+srv://maulikr1:1762002@cluster0.wgslkjc.mongodb.net/?retryWrites=true&w=majority
-
+# MONGODB_URL = mongodb+srv://maulikr1:1762002@cluster0.wgslkjc.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://maulikr1:mongodb176@cluster0.hah1vrj.mongodb.net/?retryWrites=true&w=majority
 CLOUDINARY_CLOUD_NAME = dgwhsjta7
 CLOUDINARY_API_KEY = 436432422554465
 CLOUDINARY_API_SECRET = Wrx8lYcVtUecAHV0Qq-neNkf4zM
